<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipeContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backrepeat"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.prabhsingh.tipcalculator.MainActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/restaurant_menu_icon"
            android:src="@drawable/restaurant"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view1"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView2"
            android:layout_marginBottom="10dp"
            android:background="@color/accent_material_light"
            android:padding="10dp"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/billAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_amount"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <EditText
                    android:id="@+id/billAmountField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:ems="7"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:id="@+id/tipPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/billAmount"
                    android:layout_marginTop="42dp"
                    android:text="@string/tip_percent"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <Spinner
                    android:id="@+id/tipPercentField"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/billAmountField"
                    android:layout_alignTop="@+id/tipPercent"
                    android:spinnerMode="dropdown"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/card_view1"
            android:layout_marginBottom="10dp"
            android:background="@color/accent_material_light"
            android:clickable="false"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tipAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/grandTotal"
                    android:layout_alignParentStart="true"
                    android:text="@string/tip_amount"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/tipAmountField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/tipAmount"
                    android:text="@string/cost"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/grandTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tipAmountField"
                    android:layout_marginTop="41dp"
                    android:text="@string/grand_total"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/grandTotalField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/tipAmountField"
                    android:layout_alignTop="@+id/grandTotal"
                    android:text="@string/cost"
                    android:textSize="30sp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_view3"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/card_view2"
            android:background="@color/accent_material_light"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/split"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/split_among"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <EditText
                    android:id="@+id/splitField"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="textEnd"
                    />

                <TextView
                    android:id="@+id/amountPerPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/splitField"
                    android:layout_marginTop="28dp"
                    android:text="@string/amount_per_person"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/amountPerPersonField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/amountPerPerson"
                    android:text="@string/cost"
                    android:textSize="30sp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>
